--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   animation: marquee 20s linear infinite;
   white-space: nowrap; 
 }
+.marquer {
+  animation: marquer 20s linear infinite;
+  white-space: nowrap; 
+}
 
 @keyframes marquee {
   0% {
@@ -21,7 +25,27 @@
     transform: translateX(-40%);
   }
   100% {
-    transform: translateX(-50%); /* عشان نوصل لنص النسخة المكررة */
+    transform: translateX(-50%); 
+  }
+}
+@keyframes marquer {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(10%);
+  }
+  40% {
+    transform: translateX(20%);
+  }
+  60% {
+    transform: translateX(30%);
+  }
+  80% {
+    transform: translateX(40%);
+  }
+  100% {
+    transform: translateX(50%); 
   }
 }
 
